# 4-michael555444

./: CMakeLists.txt
src/Comparer/: comparer.c  comparer_lib.c
src/Converter/: includes.h  main.c
src/Converter/ThirdPartyWrittenConverter/: qdbmp.c  qdbmp.h
